--- a/CnnNetLib/CnnNetLib.csproj
+++ b/CnnNetLib/CnnNetLib.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CnnNet.cs" />
+    <Compile Include="IActiveNeuronGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomActiveNeuronGenerator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
