--- a/CnnNetLib/CnnNetLib.csproj
+++ b/CnnNetLib/CnnNetLib.csproj
@@ -44,6 +44,7 @@
     <Compile Include="IActiveNeuronGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomActiveNeuronGenerator.cs" />
+    <Compile Include="SequentialActiveInputNeuronGenerator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
