--- a/CnnNetLib/CnnNetLib.csproj
+++ b/CnnNetLib/CnnNetLib.csproj
@@ -33,6 +33,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,10 +43,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CnnNet.cs" />
+    <Compile Include="FormNetworkControl.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormNetworkControl.Designer.cs">
+      <DependentUpon>FormNetworkControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="IActiveNeuronGenerator.cs" />
+    <Compile Include="NetworkParameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomActiveNeuronGenerator.cs" />
     <Compile Include="SequentialActiveInputNeuronGenerator.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="FormNetworkControl.resx">
+      <DependentUpon>FormNetworkControl.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
