--- a/CnnNetLib/CnnNetLib.csproj
+++ b/CnnNetLib/CnnNetLib.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CnnNet.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="FormNetworkControl.cs">
       <SubType>Form</SubType>
     </Compile>
