--- a/CnnNet/CnnNet/CnnNet.csproj
+++ b/CnnNet/CnnNet/CnnNet.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CnnNet4</RootNamespace>
-    <AssemblyName>CnnNet4</AssemblyName>
+    <RootNamespace>CnnNet</RootNamespace>
+    <AssemblyName>CnnNet</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
