--- a/CnnNet/CnnNet/CnnNet.csproj
+++ b/CnnNet/CnnNet/CnnNet.csproj
@@ -91,9 +91,10 @@
       <Project>{3742119C-F218-4CE2-B32F-166AEE9881A7}</Project>
       <Name>CnnNetLib</Name>
     </ProjectReference>
-    <ProjectReference Include="..\CnnNet4Content\CnnNet4Content.contentproj">
-      <Name>CnnNet4Content</Name>
+    <ProjectReference Include="..\CnnNetContent\CnnNetContent.contentproj">
+      <Name>CnnNetContent %28Content%29</Name>
       <XnaReferenceType>Content</XnaReferenceType>
+      <Project>{22360016-8B8C-4D3B-86E5-5FE4D3C69EC3}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
