--- a/CnnNetLib2/CnnNetLib2.csproj
+++ b/CnnNetLib2/CnnNetLib2.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CnnNet.cs" />
+    <Compile Include="CnnNetParameters.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="FormNetworkControl.cs">
       <SubType>Form</SubType>
@@ -51,7 +52,6 @@
       <DependentUpon>FormNetworkControl.cs</DependentUpon>
     </Compile>
     <Compile Include="IActiveNeuronGenerator.cs" />
-    <Compile Include="NetworkParameters.cs" />
     <Compile Include="Neuron.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomActiveNeuronGenerator.cs" />
