--- a/CnnNetLib2/CnnNetLib2.csproj
+++ b/CnnNetLib2/CnnNetLib2.csproj
@@ -52,7 +52,9 @@
       <DependentUpon>FormNetworkControl.cs</DependentUpon>
     </Compile>
     <Compile Include="IActiveNeuronGenerator.cs" />
-    <Compile Include="Neuron.cs" />
+    <Compile Include="NeuronBase.cs" />
+    <Compile Include="NeuronCompute.cs" />
+    <Compile Include="NeuronInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomActiveNeuronGenerator.cs" />
     <Compile Include="SequentialActiveInputNeuronGenerator.cs" />
