--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
+out/
 
 # mstest test results
 TestResults
@@ -35,6 +36,7 @@ x64/
 *.log
 *.vspscc
 *.vssscc
+*.class
 .builds
 
 # Visual C++ cache files
