Added Point class

--- a/NET/v3/cnnnet/cnnnet.Lib/cnnnet.Lib.csproj
+++ b/NET/v3/cnnnet/cnnnet.Lib/cnnnet.Lib.csproj
@@ -55,6 +55,7 @@
     <Compile Include="NeuronBase.cs" />
     <Compile Include="NeuronCompute.cs" />
     <Compile Include="NeuronInput.cs" />
+    <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomActiveNeuronGenerator.cs" />
     <Compile Include="SequentialActiveInputNeuronGenerator.cs" />
