--- a/NET/v3/cnnnet/cnnnet.Lib/cnnnet.Lib.csproj
+++ b/NET/v3/cnnnet/cnnnet.Lib/cnnnet.Lib.csproj
@@ -44,28 +44,30 @@
   <ItemGroup>
     <Compile Include="CnnNet.cs" />
     <Compile Include="CnnNetParameters.cs" />
-    <Compile Include="Extensions.cs" />
+    <Compile Include="Utils\Extensions.cs" />
     <Compile Include="FormNetworkControl.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormNetworkControl.designer.cs">
       <DependentUpon>FormNetworkControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="IActiveNeuronGenerator.cs" />
-    <Compile Include="IAxonGuidanceForce.cs" />
-    <Compile Include="NeuronBase.cs" />
-    <Compile Include="NeuronCompute.cs" />
-    <Compile Include="NeuronInput.cs" />
-    <Compile Include="Point.cs" />
+    <Compile Include="ActiveNeuronGenerator\IActiveNeuronGenerator.cs" />
+    <Compile Include="AxonGuidanceForces\IAxonGuidanceForce.cs" />
+    <Compile Include="Neurons\NeuronBase.cs" />
+    <Compile Include="Neurons\NeuronCompute.cs" />
+    <Compile Include="Neurons\NeuronInput.cs" />
+    <Compile Include="Utils\Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RandomActiveNeuronGenerator.cs" />
-    <Compile Include="SequentialActiveInputNeuronGenerator.cs" />
+    <Compile Include="ActiveNeuronGenerator\RandomActiveNeuronGenerator.cs" />
+    <Compile Include="ActiveNeuronGenerator\SequentialActiveInputNeuronGenerator.cs" />
+    <Compile Include="AxonGuidanceForces\UndesirabilityMapAxonGuidanceForce.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FormNetworkControl.resx">
       <DependentUpon>FormNetworkControl.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
