--- a/NET/v3/cnnnet/cnnnet.Lib/cnnnet.Lib.csproj
+++ b/NET/v3/cnnnet/cnnnet.Lib/cnnnet.Lib.csproj
@@ -54,9 +54,7 @@
     </Compile>
     <Compile Include="ActiveNeuronGenerator\IActiveNeuronGenerator.cs" />
     <Compile Include="AxonGuidanceForces\IAxonGuidanceForce.cs" />
-    <Compile Include="Neurons\NeuronBase.cs" />
-    <Compile Include="Neurons\NeuronCompute.cs" />
-    <Compile Include="Neurons\NeuronInput.cs" />
+    <Compile Include="Neurons\Neuron.cs" />
     <Compile Include="Utils\Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ActiveNeuronGenerator\RandomActiveNeuronGenerator.cs" />
