--- a/NET/v3/cnnnet/cnnnet.Lib/cnnnet.Lib.csproj
+++ b/NET/v3/cnnnet/cnnnet.Lib/cnnnet.Lib.csproj
@@ -42,11 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GuidanceForces\DesirabilityMapAxonGuidanceForce.cs" />
-    <Compile Include="GuidanceForces\FollowExistingAxonGuidanceForce.cs" />
+    <Compile Include="GuidanceForces\Axon\AxonDesirabilityMapGuidanceForce.cs" />
+    <Compile Include="GuidanceForces\Axon\AxonFollowExistingGuidanceForce.cs" />
     <Compile Include="CnnNet.cs" />
     <Compile Include="CnnNetParameters.cs" />
     <Compile Include="GuidanceForces\GuidanceForceBase.cs" />
+    <Compile Include="GuidanceForces\Soma\SomaDesirabilityMapGuidanceForce.cs" />
+    <Compile Include="GuidanceForces\Soma\SomaGuidanceForceBase.cs" />
+    <Compile Include="GuidanceForces\Soma\SomaUndesirabilityMapGuidanceForce.cs" />
     <Compile Include="Neurons\NeuronAxonWaypoint.cs" />
     <Compile Include="Utils\Extensions.cs" />
     <Compile Include="FormNetworkControl.cs">
@@ -56,13 +59,13 @@
       <DependentUpon>FormNetworkControl.cs</DependentUpon>
     </Compile>
     <Compile Include="ActiveNeuronGenerator\IActiveNeuronGenerator.cs" />
-    <Compile Include="GuidanceForces\AxonGuidanceForceBase.cs" />
+    <Compile Include="GuidanceForces\Axon\AxonGuidanceForceBase.cs" />
     <Compile Include="Neurons\Neuron.cs" />
     <Compile Include="Utils\Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ActiveNeuronGenerator\RandomActiveNeuronGenerator.cs" />
     <Compile Include="ActiveNeuronGenerator\SequentialActiveInputNeuronGenerator.cs" />
-    <Compile Include="GuidanceForces\UndesirabilityMapAxonGuidanceForce.cs" />
+    <Compile Include="GuidanceForces\Axon\AxonUndesirabilityMapGuidanceForce.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FormNetworkControl.resx">
