--- a/NET/v3/cnnnet/cnnnet.Viewer/cnnnet.Viewer.csproj
+++ b/NET/v3/cnnnet/cnnnet.Viewer/cnnnet.Viewer.csproj
@@ -40,8 +40,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CnnNetGame.cs" />
+    <Compile Include="GameUtils.cs" />
+    <Compile Include="NeuronViewerGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
