New viewer desirability and undesirability

--- a/NET/v3/cnnnet/cnnnet.ViewerWpf/cnnnet.ViewerWpf.csproj
+++ b/NET/v3/cnnnet/cnnnet.ViewerWpf/cnnnet.ViewerWpf.csproj
@@ -59,7 +59,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Viewer.cs" />
+    <Compile Include="Constants.cs" />
+    <Compile Include="ViewerManager.cs" />
+    <Compile Include="ViewerUndesirability.cs" />
+    <Compile Include="ViewerBase.cs" />
     <Compile Include="ViewerDesirability.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
