Display Neurons (buggy)

--- a/NET/v3/cnnnet/cnnnet.ViewerWpf/cnnnet.ViewerWpf.csproj
+++ b/NET/v3/cnnnet/cnnnet.ViewerWpf/cnnnet.ViewerWpf.csproj
@@ -60,6 +60,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Constants.cs" />
+    <Compile Include="Resources.cs" />
+    <Compile Include="Utils.cs" />
     <Compile Include="ViewerManager.cs" />
     <Compile Include="ViewerUndesirability.cs" />
     <Compile Include="ViewerBase.cs" />
@@ -110,6 +112,26 @@
       <Project>{9d20ce51-39c3-4e23-bdf0-85b59cb3ee22}</Project>
       <Name>cnnnet.Lib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\neuronActive.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\neuronHover.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\neuronIdle.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\neuronInputActive.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\neuronInputIdle.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\neuronSelected.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
