--- a/NET/v3/cnnnet/cnnnet.ViewerWpf/cnnnet.ViewerWpf.csproj
+++ b/NET/v3/cnnnet/cnnnet.ViewerWpf/cnnnet.ViewerWpf.csproj
@@ -62,10 +62,10 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Resources.cs" />
     <Compile Include="Utils.cs" />
-    <Compile Include="ViewerManager.cs" />
-    <Compile Include="ViewerUndesirability.cs" />
-    <Compile Include="ViewerBase.cs" />
-    <Compile Include="ViewerDesirability.cs" />
+    <Compile Include="Viewers\ViewerManager.cs" />
+    <Compile Include="Viewers\ViewerUndesirability.cs" />
+    <Compile Include="Viewers\ViewerBase.cs" />
+    <Compile Include="Viewers\ViewerDesirability.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
