--- a/NET/v3/cnnnet/cnnnet.Lib/cnnnet.Lib.csproj
+++ b/NET/v3/cnnnet/cnnnet.Lib/cnnnet.Lib.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <EmbeddedResource Include="FormNetworkControl.resx">
       <DependentUpon>FormNetworkControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
