--- a/NET/v3/cnnnet/cnnnet.ViewerWpf/cnnnet.ViewerWpf.csproj
+++ b/NET/v3/cnnnet/cnnnet.ViewerWpf/cnnnet.ViewerWpf.csproj
@@ -64,7 +64,8 @@
     <Compile Include="Utils.cs" />
     <Compile Include="Viewers\NeuronChangedEventArgs.cs" />
     <Compile Include="Viewers\ViewerAxonTerminalGuidanceForces.cs" />
-    <Compile Include="Viewers\ViewerManager.cs" />
+    <Compile Include="Viewers\ViewerManagerBase.cs" />
+    <Compile Include="Viewers\ViewerManagerNetwork.cs" />
     <Compile Include="Viewers\ViewerUndesirability.cs" />
     <Compile Include="Viewers\ViewerBase.cs" />
     <Compile Include="Viewers\ViewerDesirability.cs" />
