Reverted GuidanceForceBase initialized value to 0 Added SelectedNeuron to MainWindow and added bindings Added Break On Process Call checkbox

--- a/NET/cnnnet.Lib/cnnnet.Lib.csproj
+++ b/NET/cnnnet.Lib/cnnnet.Lib.csproj
@@ -46,9 +46,9 @@
     <Compile Include="GuidanceForces\Axon\AxonFollowExistingGuidanceForce.cs" />
     <Compile Include="CnnNet.cs" />
     <Compile Include="CnnNetParameters.cs" />
-    <Compile Include="GuidanceForces\Axon\AxonGuidanceForcesSumEventArgs.cs" />
+    <Compile Include="GuidanceForces\Events\AxonGuidanceForcesSumEventArgs.cs" />
     <Compile Include="GuidanceForces\GuidanceForceBase.cs" />
-    <Compile Include="GuidanceForces\GuidanceForceScoreEventArgs.cs" />
+    <Compile Include="GuidanceForces\Events\GuidanceForceScoreEventArgs.cs" />
     <Compile Include="GuidanceForces\Soma\SomaDesirabilityMapGuidanceForce.cs" />
     <Compile Include="GuidanceForces\Soma\SomaGuidanceForceBase.cs" />
     <Compile Include="GuidanceForces\Soma\SomaUndesirabilityMapGuidanceForce.cs" />
