started work @ guidance force mask

--- a/NET/cnnnet.Lib/cnnnet.Lib.csproj
+++ b/NET/cnnnet.Lib/cnnnet.Lib.csproj
@@ -84,6 +84,7 @@
     <Compile Include="GuidanceForces\Events\AxonGuidanceForcesSumEventArgs.cs" />
     <Compile Include="GuidanceForces\GuidanceForceBase.cs" />
     <Compile Include="GuidanceForces\Events\GuidanceForceScoreEventArgs.cs" />
+    <Compile Include="GuidanceForces\GuidanceForceMaskBase.cs" />
     <Compile Include="GuidanceForces\Soma\SomaDesirabilityMapGuidanceForce.cs" />
     <Compile Include="GuidanceForces\Soma\SomaGuidanceForceBase.cs" />
     <Compile Include="GuidanceForces\Soma\SomaUndesirabilityMapGuidanceForce.cs" />
