--- a/NET/cnnnet.Lib/cnnnet.Lib.csproj
+++ b/NET/cnnnet.Lib/cnnnet.Lib.csproj
@@ -88,6 +88,7 @@
     <Compile Include="GuidanceForces\Soma\SomaDesirabilityMapGuidanceForce.cs" />
     <Compile Include="GuidanceForces\Soma\SomaGuidanceForceBase.cs" />
     <Compile Include="GuidanceForces\Soma\SomaUndesirabilityMapGuidanceForce.cs" />
+    <Compile Include="Neurons\DendricSynapse.cs" />
     <Compile Include="Neurons\NeuronAxonGuidanceForcesScoreEventArgs.cs" />
     <Compile Include="Neurons\NeuronAxonWaypoint.cs" />
     <Compile Include="Utils\Extensions.cs" />
