--- a/NET/cnnnet.Lib/cnnnet.Lib.csproj
+++ b/NET/cnnnet.Lib/cnnnet.Lib.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Neurons\DendricSynapse.cs" />
     <Compile Include="Neurons\NeuronAxonGuidanceForcesScoreEventArgs.cs" />
     <Compile Include="Neurons\NeuronAxonWaypoint.cs" />
+    <Compile Include="Neurons\NeuronType.cs" />
     <Compile Include="Utils\Contract.cs" />
     <Compile Include="Utils\Extensions.cs" />
     <Compile Include="ActiveNeuronGenerator\IActiveNeuronGenerator.cs" />
