--- a/NET/cnnnet.Lib/cnnnet.Lib.csproj
+++ b/NET/cnnnet.Lib/cnnnet.Lib.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActiveNeuronGenerator\InputOuputBindedActivityGenerator.cs" />
     <Compile Include="FixedSizedQueue.cs" />
     <Compile Include="GuidanceForces\Axon\AxonDesirabilityMapGuidanceForce.cs" />
     <Compile Include="GuidanceForces\Axon\AxonFollowExistingGuidanceForce.cs" />
